# NHF_Farm

./: .gitignore  CMakeLists.txt  Doxyfile  FarmR_felhasznaloi_dokumentacio.docx  NHF1_Farm.sln  NHF1_Farm.vcxproj  NHF1_Farm.vcxproj.filters  Specifikacio.docx  install.bat  install.sh  pauseMenu.psd
.github/workflows/: c-cpp.yml  msbuild.yml
NHF1_Farm/x64/Debug/: NHF1_Farm.exe.recipe  NHF1_Farm.ilk  vc143.idb
NHF1_Farm/x64/Debug/NHF1_Farm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NHF1_Farm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: app_icon.aps
saves/: example.save
src/: character.c  character.h  definitions.h  game.c  game.h  item.c  item.h  main.c  main.h  mainMenu.c  mainMenu.h  map.c  map.h  pauseMenu.c  pauseMenu.h  render.c  render.h  saveManager.c  saveManager.h  settingsMenu.c  settingsMenu.h  structures.h  ui_structs.c
src/crypto/: base64.c  base64.h  vigenere.c  vigenere.h
src/include/: character_structs.h  item_structs.h  map_structs.h  sdl_includes.h  settings_structs.h  ui_structs.c  ui_structs.h
src/menus/: mainMenu.c  mainMenu.h  pauseMenu.c  pauseMenu.h  settingsMenu.c  settingsMenu.h
